# solve.aleq.dev

./: Dockerfile  README.md
docker-config/debug/: .env  docker-compose.yml
docker-config/release/: docker-compose.yml
server/: Cargo.toml
server/auth/: Cargo.toml
server/auth/src/: lib.rs
server/db/: Cargo.toml
server/db/migrations/2023-12-16-141737_auth/: up.sql
server/db/src/: lib.rs  schema.rs
server/db/src/orm/: user.rs
server/language_module/: Cargo.toml
server/language_module/src/: lib.rs
server/language_module_cpp/: Cargo.toml
server/language_module_cpp/src/: lib.rs
server/language_module_python/: Cargo.toml
server/language_module_python/src/: lib.rs
server/launcher/: Cargo.toml
server/launcher/src/: main.rs
server/web/: Cargo.toml
server/web/src/: errors.rs  lib.rs  templates.rs
server/web/src/auth/: config.rs  handlers.rs  jwt.rs  mod.rs  model.rs
server/web/static/: styles.css
server/web/templates/: base.html  content.html  index.html
server/web/templates/widgets/: auth-head.html  auth.html  login-form.html  register-form.html
server/web/templates/widgets/nav/: login.html  logout.html  navbar.html  navuser.html  register.html
