[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
argon2 = "0.5.2"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.30"
tokio = "1.35.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
tower-sessions = "0.7.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
deadpool = "0.10.0"
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres", "async-connection-wrapper"] }

